<resources>
    <string name="app_name">Chef.IO</string>

    <string name="no_internet">No Internet Connected</string>
    <string name="msg_no_internet">No Internet connection found. Check your connection try again.</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="time_out">Response time out</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up"> Sign up?</string>
    <string name="by_login_or_registering_you_are_accepting_our_t_c_and_privacy_policy"><![CDATA[By login or registering you are accepting our T&C and Privacy policy]]></string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="register">Register</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_the_otp_you_received_on_your_mobile_number">Enter the OTP you received on your mobile number</string>
    <string name="verify">Verify</string>
    <string name="select_gender">Select gender</string>
    <string name="enter_birthdate">Enter BirthDate</string>
    <string name="select_interested_cuisines">Select interested cuisines</string>
    <string name="register_new_account">Register new account</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_address_line_1">Enter address line 1</string>
    <string name="enter_address_line_2">Enter address line 2</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_province">Enter Province</string>
    <string name="enter_country">Enter Country</string>
    <string name="select_speciality_cuisines">Select your speciality cuisines</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="send_otp">Send OTP</string>
    <string name="you_will_receive_otp_on_your_registered_mobile_number_or_email_address">You will receive OTP on your registered mobile number or email address</string>
    <string name="try_with_the_mobile_number">Try with the mobile number?</string>
    <string name="select_cuisines">Select cuisines</string>
    <string name="select">Select</string>
    <string name="ellipsis">…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="personal_details">Personal Details</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="reset">Reset</string>
    <string name="thank_you">Thank You</string>
    <string name="customer_support">Customer support</string>
    <string name="please_enter_you_below_details">Please enter you below details</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="enter_message">Enter Message</string>
    <string name="send_message">Send message</string>
    <string name="try_with_email">Try with email?</string>
    <string name="next">Next</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="enter_card_name">Enter card name</string>
    <string name="enter_card_number">Enter card number</string>
    <string name="date">Date</string>
    <string name="CVV">CVV</string>
    <string name="payment_preference">Payment preference</string>
    <string name="feedback">Feedback</string>
    <string name="submit">Submit</string>
    <string name="booking_timing">Booking Timing</string>
    <string name="booking_duration">Booking duration</string>
    <string name="booking_amount">Booking amount</string>
    <string name="order_detail">Order detail</string>
    <string name="search">Search...</string>
    <string name="book">Book</string>
    <string name="save">Save</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="monday">Monday :</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="tuesday">Tuesday :</string>
    <string name="wednesday">Wednesday :</string>
    <string name="thursday">Thursday :</string>
    <string name="friday">Friday :</string>
    <string name="saturday">Saturday :</string>
    <string name="sunday">Sunday :</string>
    <string name="what_s_on_your_head">What’s on your head?</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="enter_your_username">Enter username</string>
    <string name="enter_facebook_link">Enter facebook link</string>
    <string name="enter_youtube_link">Enter youtube link</string>
    <string name="enter_insta_link">Enter instagram link</string>
    <string name="enter_twitter_link">Enter twitter(X) link</string>
    <string name="enter_caption">Enter caption</string>
    <string name="add">Add</string>
</resources>