<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.resetPassword.ResetPasswordActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivBack"
            android:layout_margin="@dimen/_15sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textColor="@color/primary"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="@id/ivBack"
            app:layout_constraintBottom_toBottomOf="@id/ivBack"
            app:layout_constraintStart_toEndOf="@id/ivBack"/>

        <EditText
            android:id="@+id/etOldPassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/round_corner_boarder"
            android:hint="@string/enter_old_password"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="0dp"
            android:textColorHint="@color/light_red"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/ivBack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/round_corner_boarder"
            android:hint="@string/enter_new_password"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="0dp"
            android:textColorHint="@color/light_red"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/etOldPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/round_corner_boarder"
            android:hint="@string/enter_confirm_password"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="0dp"
            android:textColorHint="@color/light_red"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/etNewPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/round_corner_button_red_boarder"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_15sdp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
